poke/testsuite/poke.pkl/units-diag-1.pk
/* { dg-do compile } */

defunit x = [1,2,3]; /* { dg-error "" } */
